# django-anarticle

./: README.rst  pyproject.toml
anarticle/: _version.py  resolvers.py
anarticle/graphqls/: article.graphql
tests/: test_resolvers.py
