# Copyright (c) 2014-present, aglean Inc.

[build-system]
requires = ["setuptools>=66.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-anarticle"
authors = [{ name = "cchiut", email = "chiutung.chen@aglean.com"}]
description = "App for publish articles with tags and categories"
keywords = ["django", "aglean", "article"]
readme = "README.rst"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">= 3.11"
dependencies = [
    "django >= 4.0",
    "ariadne >= 0.16.0",
    "ariadne-relay >= 0.1.0a8",
]
version = "0.0.1"

[project.optional-dependencies]
dev = [
    "python-lsp-server[rope,pyflakes,mccabe,pycodestyle,autopep8]",
    "pylsp-rope",
    "autoimport",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-django",
]


[project.urls]
Homepage = "https://github.com/aglean/django-anarticle"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
